--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Proyecto Final</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <!-- Conecto mi archivo CSS para aplicar estilos a toda la aplicación -->
 </head>
 <body>
-  {{{body}}} {{! acá se va a renderizar el contenido de cada vista, por ejemplo products o cart }}
+  {{{body}}} 
+  <!-- Aquí renderizo el contenido de cada vista, por ejemplo la lista de productos o el carrito -->
 </body>
 </html>
